5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1644_2447.log
== TEST (2019-04-09 16:49:17) 
-- CODE:
preco = float(input("aa:"))
pagamento = float(input("aa:"))

if (preco > pagamento):
	dif = preco - pagamento
	mensagem = "Falta " + dif
	print(round(mensagem,2))
else:
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:49:24) 
-- CODE:
preco = float(input("aa:"))
pagamento = float(input("aa:"))

if (preco > pagamento):
	dif = preco - pagamento
	mensagem = "Falta " + dif
	print(round(mensagem,2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = "Falta " + dif
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:30:57) 
-- CODE:
preco = float(input("aa:"))
pagamento = float(input("aa:"))

if (preco > pagamento):
	X = preco - pagamento
	mensagem = "Falta " + X
	print(round(mensagem,2))
else:
	Y = preco - pagamento
	mensagem = "Troco de " + Y
	print(round(mensagem,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mensagem = "Falta " + X
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:37:27) 
-- CODE:
preco = float(input("aa:"))
pagamento = float(input("aa:"))

if (preco > pagamento):
	X = preco - pagamento
	print("Falta ", round(X,2))
else:
	Y = preco - pagamento
	print("Troco de ", round(Y,2))
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:38:05) 
-- CODE:
preco = float(input("aa:"))
pagamento = float(input("aa:"))

if (preco > pagamento):
	X = preco - pagamento
	print("Falta ", round(X,2))
else:
	Y = pagamento - preco
	print("Troco de ", round(Y,2))
-- OUTPUT:
Falta  26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:38:16) 
-- CODE:
preco = float(input("aa:"))
pagamento = float(input("aa:"))

if (preco > pagamento):
	X = preco - pagamento
	print("Falta ", round(X,2))
else:
	Y = pagamento - preco
	print("Troco de ", round(Y,2))
-- EXECUTION TIME:
0.174154
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta  26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de  28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de  0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
